--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,7 +62,8 @@ jobs:
       - name: Create .nojekyll file
         run: |
           touch dist/.nojekyll
-          echo "Created .nojekyll to disable Jekyll processing"
+          echo "Created .nojekyll in dist/ to disable Jekyll processing"
+          echo "This file tells GitHub Pages to skip Jekyll processing"
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
